# fish_pond

./: README.md  client.py  monitor.py  pond.py  pondClass.py  pyproject.toml  run.py
Front/UI/: PondUI.ui  picture.qrc
Front/View/: PondUI.py
src/: main.py
src/config/: settings.py
src/core/: mqtt_client.py  pond.py
src/ui/dialogs/: pond_selection_dialog.py
src/ui/resources/: resource.qrc  resources_rc.py
src/ui/views/: add_sender_dialog.py  pond_window.py  testpond.py
src/ui/widgets/: fish_widget.py
